Style for Teacher's page

--- a/FormToTeacher.html
+++ b/FormToTeacher.html
@@ -6,13 +6,15 @@
     <title></title>
 </head>
 <body>
-    <div class = "IDField">
+    <div class = "DefaultBlock IDField">
         <h2> Блок преподавателя </h2>
-        <div class = "ID" ></div>
+        <div class = "ID" >Пример ID</div>
     </div>
-    <div class = "BlocksStudents">
+    <div class = "DefaultBlock BlocksStudents">
         <h2> Студенты </h2>
-        <div class = "tableStudents"></div>
+        <div class = "tableStudents">
+            <div class = "Student">Пример студента <br /> группа<div>
+        </div>
     </div>
 </body>
 </html>
