--- a/index.html
+++ b/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="CSS/default.css">
     <title>Title</title>
 </head>
 <body>
-    <header>
+    <section>
+        <label>
+            Введите ФИО:
+            <input type="text" name="name" placeholder="Фамилия Имя Отчество"> </input>
+        </label>
+        <label>
+            Название предмета:
+            <input type="text" name="subject" placeholder="Математика"> </input>
+        </label>
+        <label>
+            Название темы:
+            <input type="text" name="theme"> </input>
+        </label>
+        <label>
+            Номер группы:
+            <input type="text" name="class number"> </input>
+        </label>
+        <label>
+            <input type="submit" name="teachersButton" value="Создать Сессию">
+        </label>
+    </section>
 
-    </header>
-    <footer>
-
-    </footer>
+    <section>
+        <label>
+            Номер сессии:
+            <input type="text" name="session number"> </input>
+        </label>
+        <label>
+            <input type="submit" name="studentsButton" value="Зайти на сессию">
+        </label>
+    </section>
 </body>
 </html>
