Style for Student's and Teacher's page

--- a/FormToTeacher.html
+++ b/FormToTeacher.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <link href="CSS/TeachersPage.css" rel="stylesheet">
-    <title></title>
+    <title>TeacherPage</title>
 </head>
 <body>
-    <div class = "DefaultBlock IDField">
-        <h2> Блок преподавателя </h2>
+    <div class = "IDField">
+        <h2> Идентификатор сессии </h2>
         <div class = "ID" >Пример ID</div>
     </div>
-    <div class = "DefaultBlock BlocksStudents">
+    <div class = "BlocksStudents">
         <h2> Студенты </h2>
         <div class = "tableStudents">
-            <div class = "Student">Пример студента <br /> группа<div>
+            <div class = "Student">Фамилия<br/> Имя<br/> Отчество<br/> Группа</div>
+            <div class = "Student">Фамилия<br/> Имя<br/> Отчество<br/> Группа</div>
         </div>
     </div>
 </body>
