--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/default.css">
+    <link rel="stylesheet" href="CSS/Index.css">
     <title>Title</title>
 </head>
 <body>
-<<<<<<< Updated upstream
-<<<<<<< HEAD
-
-=======
     <section>
-=======
     <form method="get" action="/Teacher">
->>>>>>> Stashed changes
+        <label ID="Teacher" > Вы преподаватель? </label>
         <label>
             Введите ФИО:
             <input type="text" id = 'name' placeholder="Фамилия Имя Отчество" required> </input>
@@ -36,6 +31,7 @@
     </form>
 
     <form method="get" action="/Student">
+        <label ID="Student" > Вы студент? </label>
         <label>
             Введите ФИО:
             <input type="text" id = 'nameOfStudent' placeholder="Фамилия Имя Отчество" required> </input>
@@ -51,11 +47,7 @@
         <label>
             <input type="submit" name = "students Button" value="Зайти на сессию">
         </label>
-<<<<<<< Updated upstream
     </section>
->>>>>>> 2ef969522203f88c9e616bcd76025700e665670f
-=======
     </form>
->>>>>>> Stashed changes
 </body>
 </html>
