Style for index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Номер группы:
             <input type="text" id = "group number"> </input>
         </label>
-        <label>
+        <label ID="CreateSession">
             <input type="submit" id = "teachersButton" value="Создать Сессию">
         </label>
     </form>
@@ -44,8 +44,8 @@
             Номер сессии:
             <input type="text" id = "session number" required> </input>
         </label>
-        <label>
-            <input type="submit" name = "students Button" value="Зайти на сессию">
+        <label ID="OpenSession">
+            <input type="submit" id = "studentsButton" value="Зайти на сессию">
         </label>
     </section>
     </form>
